[package]
name = "explode_orfs"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.13"
# bevy-inspector-egui = "0.23.4"
# ffforf = "0.3.0"
ffforf = { path = "../ffforf" }
#needletail = {version = "0.5.1", default-features = false, features = ["flate2"]}
# needletail = { path = "../needletail", default-features = false, features = ["flate2"]}
bevy_egui = { version = "0.26.0", default-features = false, features = ["default_fonts", "render"] }
fffx = { path = "../fffx" }
rand = "0.8.5"
flate2 = {version = "1.0.28", default-features = false}
futures = "0.3.30"
rfd = "0.14.1"
bevy-async-task = "1.4.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy_xpbd_3d = {version = "0.4"}
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy_xpbd_3d = {version = "0.4", features=["simd", "parallel"]}

# flate2 = { version = "1.0.17", features = ["miniz_oxide"], default-features = false }


# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
